--- a/index.html
+++ b/index.html
@@ -140,8 +140,13 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <h4>Grove Mobile Cranes</h4>
-                            <p>All-Terrain Cranes, Truck Cranes, Rough Terrain Cranes, and Carrydecks delivering powerful lifting performance and superior mobility.</p>
+                            <div class="brand-logo-container">
+                                <img src="/images/brands/grove-cranes.png" alt="Grove Mobile Cranes" class="brand-logo grove-logo">
+                                <div class="brand-overlay">
+                                    <h4>Grove Mobile Cranes</h4>
+                                    <p>All-Terrain Cranes, Truck Cranes, Rough Terrain Cranes, and Carrydecks delivering powerful lifting performance and superior mobility.</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="brand-item">
                             <h4>National Boom Trucks</h4>
