national crane panel

--- a/index.html
+++ b/index.html
@@ -149,8 +149,13 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <h4>National Boom Trucks</h4>
-                            <p>Reliable and durable boom trucks designed for demanding work routines with ease of operation.</p>
+                            <div class="brand-logo-container">
+                                <img src="/images/brands/national-cranes.png" alt="National Boom Trucks" class="brand-logo national-logo">
+                                <div class="brand-overlay">
+                                    <h4>National Boom Trucks</h4>
+                                    <p>Reliable and durable boom trucks designed for demanding work routines with ease of operation.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
