--- a/index.html
+++ b/index.html
@@ -164,8 +164,13 @@
                     <h3>Material Handling & Lifting</h3>
                     <div class="brands-grid">
                         <div class="brand-item">
-                            <h4>Konecranes</h4>
-                            <p>Advanced overhead cranes, workstation lifting systems, container handling equipment, and lift trucks designed for efficiency and safety.</p>
+                            <div class="brand-logo-container">
+                                <img src="/images/brands/konecranes.png" alt="Konecranes" class="brand-logo konecranes-logo">
+                                <div class="brand-overlay">
+                                    <h4>Konecranes</h4>
+                                    <p>Advanced overhead cranes, workstation lifting systems, container handling equipment, and lift trucks designed for efficiency and safety.</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="brand-item">
                             <h4>JLG Equipment</h4>
