--- a/index.html
+++ b/index.html
@@ -173,8 +173,13 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <h4>JLG Equipment</h4>
-                            <p>Telehandlers, scissor lifts, and boom lifts delivering optimal productivity and enhanced performance in heavy-duty environments.</p>
+                            <div class="brand-logo-container">
+                                <img src="/images/brands/jlg.png" alt="JLG Equipment" class="brand-logo jlg-logo">
+                                <div class="brand-overlay">
+                                    <h4>JLG Equipment</h4>
+                                    <p>Telehandlers, scissor lifts, and boom lifts delivering optimal productivity and enhanced performance in heavy-duty environments.</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="brand-item">
                             <h4>Sennebogen</h4>
