--- a/index.html
+++ b/index.html
@@ -182,8 +182,13 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <h4>Sennebogen</h4>
-                            <p>High-quality telescopic crawler cranes with innovative features and German engineering excellence.</p>
+                            <div class="brand-logo-container">
+                                <img src="/images/brands/sennebogen.png" alt="Sennebogen" class="brand-logo sennebogen-logo">
+                                <div class="brand-overlay">
+                                    <h4>Sennebogen</h4>
+                                    <p>High-quality telescopic crawler cranes with innovative features and German engineering excellence.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
