logo changes, additions and new brands

--- a/index.html
+++ b/index.html
@@ -197,12 +197,22 @@
                     <h3>Transportation & Logistics</h3>
                     <div class="brands-grid">
                         <div class="brand-item">
-                            <h4>Terberg</h4>
-                            <p>Robust terminal tractors and specialized vehicles known for low fuel consumption, easy maintenance, and driver comfort.</p>
+                            <div class="brand-logo-container">
+                                <img src="/images/brands/terberg.png" alt="Terberg" class="brand-logo terberg-logo">
+                                <div class="brand-overlay">
+                                    <h4>Terberg</h4>
+                                    <p>Robust terminal tractors and specialized vehicles known for low fuel consumption, easy maintenance, and driver comfort.</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="brand-item">
-                            <h4>Bridgestone OTR Tires</h4>
-                            <p>Specialized off-the-road tires engineered to operate under extreme conditions for construction machinery and heavy equipment.</p>
+                            <div class="brand-logo-container">
+                                <img src="/images/brands/bridgestone.png" alt="Bridgestone OTR Tires" class="brand-logo bridgestone-logo">
+                                <div class="brand-overlay">
+                                    <h4>Bridgestone OTR Tires</h4>
+                                    <p>Specialized off-the-road tires engineered to operate under extreme conditions for construction machinery and heavy equipment.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
