--- a/index.html
+++ b/index.html
@@ -221,8 +221,13 @@
                     <h3>Cleaning & Maintenance</h3>
                     <div class="brands-grid">
                         <div class="brand-item">
-                            <h4>Elgin Road Sweepers</h4>
-                            <p>Advanced sweeping technology for residential, airport, municipal, construction, and industrial applications.</p>
+                            <div class="brand-logo-container">
+                                <img src="/images/brands/elgin.png" alt="Elgin Road Sweepers" class="brand-logo elgin-logo">
+                                <div class="brand-overlay">
+                                    <h4>Elgin Road Sweepers</h4>
+                                    <p>Advanced sweeping technology for residential, airport, municipal, construction, and industrial applications.</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="brand-item">
                             <h4>Vactor</h4>
