revamp of website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Boranex Middle East Trading LLC | Engineering Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./src/css/styles.css">
-    <meta name="description" content="Boranex Middle East LLC - Engineering solutions provider serving oil & gas, water, and electricity sectors across Iraq and the GCC.">
+    <meta name="description" content="Boranex Middle East LLC - Iraq's Premium Lift Solutions Provider since 1998, serving oil & gas, water, and electricity sectors across Iraq and the GCC.">
 </head>
 <body>
     <!-- Header -->
@@ -37,7 +37,7 @@
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
-                <h1>Engineering Solutions for Demanding Industries</h1>
+                <h1>Iraq's Premium Lift Solutions Provider Since 1998</h1>
                 <p>Boranex Middle East LLC is your trusted partner for comprehensive engineering solutions in the oil & gas, water, and electricity sectors across Iraq and the GCC.</p>
                 <a href="#contact" class="btn">Get in Touch</a>
             </div>
@@ -57,9 +57,9 @@
                 </div>
                 <div class="about-text fade-in">
                     <h3>Engineering Excellence in Demanding Environments</h3>
-                    <p>Boranex Middle East LLC is a premier engineering solutions provider serving the oil & gas, water, and electricity sectors across Iraq and the GCC. Under the leadership of our CEO and General Manager, we deliver comprehensive project support—from consultation and planning to installation and ongoing maintenance—tailored to meet the most demanding industry requirements.</p>
+                    <p>Boranex Middle East LLC is a premier engineering solutions provider serving the oil & gas, water, and electricity sectors across Iraq and the GCC since 1998. Under the leadership of our CEO and General Manager, we deliver comprehensive project support—from installation and ongoing maintenance to technical support and equipment supply—tailored to meet the most demanding industry requirements.</p>
                     <p>As the exclusive dealer in Iraq for numerous recognized industrial brands, we bring world-class equipment and solutions to our clients, ensuring reliability, efficiency, and performance in challenging operational environments.</p>
-                    <p>Our extensive network of partnerships with leading manufacturers allows us to provide diverse, high-quality solutions that address the unique challenges faced by our clients across multiple sectors.</p>
+                    <p>Our extensive network of partnerships with leading manufacturers allows us to provide diverse, high-quality solutions that address the unique challenges faced by our clients across multiple sectors. We take pride in our position as Iraq's Premium Lift Solutions Provider, building on our decades of experience and commitment to excellence.</p>
                 </div>
             </div>
         </div>
@@ -70,23 +70,9 @@
         <div class="container">
             <div class="section-title">
                 <h2>Our Services</h2>
-                <p>Comprehensive engineering solutions from consultation to maintenance</p>
+                <p>Comprehensive engineering solutions from installation to maintenance</p>
             </div>
             <div class="services-grid">
-                <div class="service-card fade-in">
-                    <div class="service-icon">
-                        <i class="fas fa-lightbulb"></i>
-                    </div>
-                    <h3>Consultation</h3>
-                    <p>Expert guidance on equipment selection, project planning, and technical specifications to ensure optimal solutions for your specific requirements.</p>
-                </div>
-                <div class="service-card fade-in">
-                    <div class="service-icon">
-                        <i class="fas fa-clipboard-list"></i>
-                    </div>
-                    <h3>Planning & Design</h3>
-                    <p>Detailed project planning and design services that integrate best practices and innovative approaches to maximize efficiency and performance.</p>
-                </div>
                 <div class="service-card fade-in">
                     <div class="service-icon">
                         <i class="fas fa-tools"></i>
@@ -172,39 +158,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="brand-item">
-                            <div class="brand-logo-container">
-                                <img src="/images/brands/jlg.png" alt="JLG Equipment" class="brand-logo jlg-logo">
-                                <div class="brand-overlay">
-                                    <h4>JLG Equipment</h4>
-                                    <p>Telehandlers, scissor lifts, and boom lifts delivering optimal productivity and enhanced performance in heavy-duty environments.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="brand-item">
-                            <div class="brand-logo-container">
-                                <img src="/images/brands/sennebogen.png" alt="Sennebogen" class="brand-logo sennebogen-logo">
-                                <div class="brand-overlay">
-                                    <h4>Sennebogen</h4>
-                                    <p>High-quality telescopic crawler cranes with innovative features and German engineering excellence.</p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 
                 <div class="brand-category fade-in">
-                    <h3>Transportation & Logistics</h3>
+                    <h3>Specialized Equipment</h3>
                     <div class="brands-grid">
-                        <div class="brand-item">
-                            <div class="brand-logo-container">
-                                <img src="/images/brands/terberg.png" alt="Terberg" class="brand-logo terberg-logo">
-                                <div class="brand-overlay">
-                                    <h4>Terberg</h4>
-                                    <p>Robust terminal tractors and specialized vehicles known for low fuel consumption, easy maintenance, and driver comfort.</p>
-                                </div>
-                            </div>
-                        </div>
                         <div class="brand-item">
                             <div class="brand-logo-container">
                                 <img src="/images/brands/bridgestone.png" alt="Bridgestone OTR Tires" class="brand-logo bridgestone-logo">
@@ -214,32 +173,14 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                
-                <div class="brand-category fade-in">
-                    <h3>Cleaning & Maintenance</h3>
-                    <div class="brands-grid">
                         <div class="brand-item">
                             <div class="brand-logo-container">
-                                <img src="/images/brands/elgin.png" alt="Elgin Road Sweepers" class="brand-logo elgin-logo">
+                                <img src="/images/brands/federal-signal.png" alt="Federal Signal" class="brand-logo federal-signal-logo">
                                 <div class="brand-overlay">
-                                    <h4>Elgin Road Sweepers</h4>
-                                    <p>Advanced sweeping technology for residential, airport, municipal, construction, and industrial applications.</p>
+                                    <h4>Federal Signal</h4>
+                                    <p>Leading manufacturer of specialized vehicles and equipment including Elgin street sweepers, Vactor vacuum trucks, and Guzzler industrial vacuum loaders.</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="brand-item">
-                            <h4>Vactor</h4>
-                            <p>Industry-leading sewer cleaners, catch basin cleaners, jetters, and vacuum excavation trucks known for durability and reliability.</p>
-                        </div>
-                        <div class="brand-item">
-                            <h4>Guzzler</h4>
-                            <p>Powerful industrial vacuum trucks designed to recover and contain solids, liquids, and sludge from hard-to-reach areas.</p>
-                        </div>
-                        <div class="brand-item">
-                            <h4>Jetstream</h4>
-                            <p>Innovative high-pressure industrial water blasting solutions for safer cleaning, surface preparation, and hydro-demolition.</p>
                         </div>
                     </div>
                 </div>
