--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Iraq's Premium Lift Solutions Provider Since 1998</h1>
-                <p>Boranex Middle East LLC is your trusted partner for comprehensive engineering solutions in the oil & gas, water, and electricity sectors across Iraq and the GCC.</p>
+                <p>Boranex Middle East LLC is your trusted partner for cutting-edge engineering solutions, lifting equipment, and material handling services tailored to the Oil & Gas, Water & Electricity sectors across Iraq and the GCC.</p>
                 <a href="#contact" class="btn">Get in Touch</a>
             </div>
         </div>
@@ -92,14 +92,14 @@
                         <i class="fas fa-cogs"></i>
                     </div>
                     <h3>Technical Support</h3>
-                    <p>Responsive technical support from experienced professionals who understand the unique challenges of your industry and equipment.</p>
+                    <p>Responsive and proactive technical support from experienced professionals who understand your industry needs and equipment requirements—ensuring minimal downtime, optimized performance, and peace of mind for your operations.</p>
                 </div>
                 <div class="service-card fade-in">
                     <div class="service-icon">
                         <i class="fas fa-truck"></i>
                     </div>
                     <h3>Equipment Supply</h3>
-                    <p>Access to a wide range of high-quality equipment from leading global manufacturers, with expert advice on the best solutions for your needs.</p>
+                    <p>Access to a wide range of high-quality equipment from leading global manufacturers such as Manitowoc, Grove by Manitowoc, National Crane by Manitowoc, Konecranes, Bridgestone, and Federal Signal, complemented by expert guidance to help you identify the best, most cost-effective solutions for your operational needs.</p>
                 </div>
             </div>
         </div>
@@ -127,18 +127,18 @@
                         </div>
                         <div class="brand-item">
                             <div class="brand-logo-container">
-                                <img src="/images/brands/grove-cranes.png" alt="Grove Mobile Cranes" class="brand-logo grove-logo">
+                                <img src="/images/brands/grove-cranes.png" alt="Grove by Manitowoc" class="brand-logo grove-logo">
                                 <div class="brand-overlay">
-                                    <h4>Grove Mobile Cranes</h4>
+                                    <h4>Grove by Manitowoc</h4>
                                     <p>All-Terrain Cranes, Truck Cranes, Rough Terrain Cranes, and Carrydecks delivering powerful lifting performance and superior mobility.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="brand-item">
                             <div class="brand-logo-container">
-                                <img src="/images/brands/national-cranes.png" alt="National Boom Trucks" class="brand-logo national-logo">
+                                <img src="/images/brands/national-cranes.png" alt="National Cranes by Manitowoc" class="brand-logo national-logo">
                                 <div class="brand-overlay">
-                                    <h4>National Boom Trucks</h4>
+                                    <h4>National Cranes by Manitowoc</h4>
                                     <p>Reliable and durable boom trucks designed for demanding work routines with ease of operation.</p>
                                 </div>
                             </div>
@@ -154,7 +154,7 @@
                                 <img src="/images/brands/konecranes.png" alt="Konecranes" class="brand-logo konecranes-logo">
                                 <div class="brand-overlay">
                                     <h4>Konecranes</h4>
-                                    <p>Advanced overhead cranes, workstation lifting systems, container handling equipment, and lift trucks designed for efficiency and safety.</p>
+                                    <p>Lift trucks, reach stackers, container handlers, heavy-duty forklift trucks, and port solutions, together with industrial overhead cranes are engineered for efficiency and safety.</p>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                 <img src="/images/brands/bridgestone.png" alt="Bridgestone OTR Tires" class="brand-logo bridgestone-logo">
                                 <div class="brand-overlay">
                                     <h4>Bridgestone OTR Tires</h4>
-                                    <p>Specialized off-the-road tires engineered to operate under extreme conditions for construction machinery and heavy equipment.</p>
+                                    <p>Specialized off-the-road (OTR) tires engineered to operate under extreme conditions for construction machinery and heavy equipment.</p>
                                 </div>
                             </div>
                         </div>
@@ -202,15 +202,11 @@
                 </div>
                 <div class="market-card fade-in">
                     <h3>International Oil Companies (IOCs)</h3>
-                    <p>Supporting major players like BP, Royal Dutch Shell, ExxonMobil, Total, and Eni with reliable equipment for demanding operations.</p>
+                    <p>Supporting leading operators—including BP – Iraq, Rumalia Operating Organisation (ROO), a subsidiary of BP – Iraq, Royal Dutch Shell, ExxonMobil, TotalEnergies, Basra Energy, and other Chinese companies—with reliable equipment for demanding operations.</p>
                 </div>
                 <div class="market-card fade-in">
-                    <h3>Prime Contractors</h3>
-                    <p>Partnering with KBR, Halliburton, Baker Hughes, Weatherford, and other leading contractors to ensure project success.</p>
-                </div>
-                <div class="market-card fade-in">
-                    <h3>Companies Operating in Kurdistan</h3>
-                    <p>Providing specialized solutions for the unique requirements of operations in the Kurdistan region.</p>
+                    <h3>Foreign companies operating in Iraq</h3>
+                    <p>Partnering with KBR, Halliburton, Baker Hughes, Weatherford, OiLSERV, Amentum, PAE, Dyncorp, SOSi, Sallyport Global, and other leading contractors to ensure project success.</p>
                 </div>
                 <div class="market-card fade-in">
                     <h3>Leasing Companies</h3>
