--- a/index.html
+++ b/index.html
@@ -627,7 +627,8 @@
                         <i class="fas fa-cogs"></i>
                     </div>
                     <h3>Technical Support</h3>
-                    <p>Responsive and proactive technical support from experienced professionals who understand your industry needs and equipment requirements—ensuring minimal downtime, optimized performance, and peace of mind for your operations.</p>
+                    <p>Responsive and proactive
+                     technical support from experienced professionals who understand your industry needs and equipment requirements—ensuring minimal downtime, optimized performance, and peace of mind for your operations.</p>
                 </div>
                 <div class="service-card fade-in">
                     <div class="service-icon">
